organizando el índice

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@ title: Wordpress
         <img src="img/wordpress-logo.svg" width="100%">
     </div>
     <div class="col-sm-10">
-        <h1>Programación en Scala</h1>
-        <p>Esta web es un curso sobre programación en lenguaje Scala.
-            Explicaremos los conceptos básicos del lenguaje, suponiendo una base previa de programación,
-            sobre qué es una variable, una condición, un bucle, etc., para así tratar estos conceptos aplicados
-            al lenguaje Scala. En caso de no tener esa base, quizá sea conveniente adquirirla echando un vistazo
-            a otras webs como <a href="https://nachoiborraies.github.io/csharp/" target="_blank">esta</a>, donde se dan nociones de programación en otro
-            lenguaje, como es C#.</p> 
+        <h1>WordPress</h1>
+        <p>This website is a course about WordPress, an open source content management system (CMS). 
+            It explains what WordPress is and its importance in the creation of websites. 
+            It will show how to install WordPress on a free hosting, such as <a href="https://trencheradev.com/" target="blank_"> TrencheraDev</a>, and 
+            how to install WordPress in a local environment using XAMPP, as well as configure the database and other necessary settings for WordPress
+            to work. We will also learn how to create and manage content in WordPress, such as pages and posts, and how to use the text and multimedia 
+            editing features. We will analyze the functionality of most popular plugins and widgets in WordPress, including the 
+            functionalities and features of WooCommerce, the most popular eCommerce plugin for WordPress. And finally, we will learn the best practices
+            to optimize and secure a WordPress website.  
+             
          <p>El uso de estos materiales está sujeto a una licencia Creative Commons <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
     </div>
 </div>
@@ -22,16 +25,26 @@ title: Wordpress
 <div class="row g-3">
     <div class="col-sm-4">
         <div class="celda p-3">
-            <h4>Introducción a Scala</h4>
-            <a href="md/es/01">Primeros pasos con Scala</a>
-            <a href="md/es/02">Elementos básicos del lenguaje</a>
-            <a href="md/es/03">Estructuras de control</a>
+            <h4>Introduction to WordPress</h4>
+            <a href="md/es/01">What's WordPress? </a>
+            <a href="md/es/02">WordPress installation</a>
+            <a href="md/es/03">Basic WordPress setup and customization</a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="celda p-3">
-            <h4>Estructuras de datos</h4>
-            <a href="md/es/04">Cadenas de texto</a>
+            <h4>Content, Plugins and Electronic Commerce</h4>
+            <a href="md/es/04">Content Management in WordPress</a>
+            <a href="md/es/05">Plugins and widgets in WordPress</a>
+            <a href="md/es/06">Creating an Ecommerce Website on WordPress</a>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="celda p-3">
+            <h4>Optimization, SEO and Advanced Design</h4>
+            <a href="md/es/07">Optimization and security in WordPress</a>
+            <a href="md/es/08">Analysis of statistics and SEO in WordPress</a>
+            <a href="md/es/09">Design and advanced layout in WordPress</a>
         </div>
     </div>
 </div>
