organizando el índice

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Wordpress
             functionalities and features of WooCommerce, the most popular eCommerce plugin for WordPress. And finally, we will learn the best practices
             to optimize and secure a WordPress website.  
              
-         <p>El uso de estos materiales está sujeto a una licencia Creative Commons <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+         <p>The use of these materials is subject to a Creative Commons license. <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
     </div>
 </div>
 
