Organizando el indice

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@ title: Wordpress
         <h1>WordPress</h1>
         <p>This website is a course about WordPress, an open source content management system (CMS). 
             It explains what WordPress is and its importance in the creation of websites. 
-            It will show how to install WordPress on a free hosting, such as <a href="https://trencheradev.com/" target="blank_"> TrencheraDev</a>, and 
-            how to install WordPress in a local environment using XAMPP, as well as configure the database and other necessary settings for WordPress
-            to work. We will also learn how to create and manage content in WordPress, such as pages and posts, and how to use the text and multimedia 
-            editing features. We will analyze the functionality of most popular plugins and widgets in WordPress, including the 
-            functionalities and features of WooCommerce, the most popular eCommerce plugin for WordPress. And finally, we will learn the best practices
-            to optimize and secure a WordPress website.  
+            It will show how to install WordPress on a free hosting and how to install WordPress in a local environment using XAMPP, as well as 
+            configure the database and other necessary settings for WordPress to work. We will also learn how to create and manage content in 
+            WordPress, such as pages and posts, and how to use the text and multimedia editing features. We will analyze the functionality of most 
+            popular plugins and widgets in WordPress, including the functionalities and features of WooCommerce, the most popular eCommerce plugin
+            for WordPress. And finally, we will learn the best practices to optimize and secure a WordPress website.  
              
          <p>The use of these materials is subject to a Creative Commons license. <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
     </div>
